# rag

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README-k6.md  README.md  api-test.js  docker-compose.yaml  load-test.js  rag.md  test-api.sh
documents/: sample-database-optimization.txt
migrations/: 001_create_file_to_embedding_task.down.sql  001_create_file_to_embedding_task.up.sql
scripts/: kafka-setup.sh
services/file-processor/: Cargo.toml  Dockerfile
services/file-processor/src/: main.rs
services/rag-api/: Cargo.toml  Dockerfile
services/rag-api/src/: main.rs
services/rag-api/src/handlers/: file_embedding_task.rs  mod.rs  search.rs
services/rag-api/src/models/: file_embedding_task.rs  mod.rs
tests/: api-test.js  load-test.js  qdrant-integration-test.js  run-tests.sh  smoke-test.js
xlib/: Cargo.toml
xlib/src/app/: graceful_shutdown.rs  mod.rs  serve.rs  tracing.rs
xlib/src/client/: kafka.rs  mod.rs  openai.rs  postgres.rs
