[workspace]
resolver = "2"
members = ["services/rag-api", "services/file-processor", "xlib"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"

future_not_send = "allow"
must_use_candidate = "allow"
unused_async = "allow"

manual_let_else = "allow"
option_if_let_else = "allow"
module_name_repetitions = "allow"
struct_field_names = "allow"
redundant_closure_for_method_calls = "allow"
uninlined_format_args = "allow"
similar_names = "allow"
explicit_deref_methods = "allow"
