[package]
name = "xlib"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
] }

thiserror = "2.0.11"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "1.0", features = ["full"] }
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
lazy_static = "1.5"
rand = "0.8"

# OpenAI integration
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.132"

# Kafka client
rdkafka = { version = "0.36", features = ["tokio"] }
