[package]
name = "file-processor"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
xlib = { version = "0.1", path = "../../xlib" }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2.0.11"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.0", features = ["serde", "v4", "v5"] }
dotenv = "0.15.0"
futures = "0.3.31"

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
] }

# Vector database
qdrant-client = "1.12.1"

# File processing
walkdir = "2.4"
notify = "6.1"
