[package]
name = "rag-api"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
xlib = { version = "0.1", path = "../../xlib" }

axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
dotenv = "0.15.0"
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
